// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsViews WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsViews WarningsView does displays a warning 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-14 IJQaq"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-15 jPcVVC"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-16 buBBgk"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-20 hvZiFr"
        >
          WARNING xx0
        </div>
        <h4
          class="styled__StyledH4-sc-1dtvgs1-26 jXSkte"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-17 kkPWFM"
      >
        <div
          class="styled__StyledHelpDescription-sc-1dtvgs1-16 buBBgk"
        >
          This is xx2 warning
        </div>
        <div
          class="styled__StyledDiv-sc-1dtvgs1-17 kkPWFM"
        >
          <pre
            class="styled__StyledPreformattedArea-sc-1dtvgs1-28 fxWKEH"
          >
            EXPLAIN MATCH xx3
            <br
              class="styled__StyledBr-sc-1dtvgs1-27 bdFSvo"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsViews WarningsView does displays multiple warnings 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-14 IJQaq"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-15 jPcVVC"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-16 buBBgk"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-20 hvZiFr"
        >
          WARNING xx0
        </div>
        <h4
          class="styled__StyledH4-sc-1dtvgs1-26 jXSkte"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-17 kkPWFM"
      >
        <div
          class="styled__StyledHelpDescription-sc-1dtvgs1-16 buBBgk"
        >
          This is xx2 warning
        </div>
        <div
          class="styled__StyledDiv-sc-1dtvgs1-17 kkPWFM"
        >
          <pre
            class="styled__StyledPreformattedArea-sc-1dtvgs1-28 fxWKEH"
          >
            EXPLAIN MATCH zz3
            <br
              class="styled__StyledBr-sc-1dtvgs1-27 bdFSvo"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-15 jPcVVC"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-16 buBBgk"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-20 hvZiFr"
        >
          WARNING yy0
        </div>
        <h4
          class="styled__StyledH4-sc-1dtvgs1-26 jXSkte"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-17 kkPWFM"
      >
        <div
          class="styled__StyledHelpDescription-sc-1dtvgs1-16 buBBgk"
        >
          This is yy2 warning
        </div>
        <div
          class="styled__StyledDiv-sc-1dtvgs1-17 kkPWFM"
        >
          <pre
            class="styled__StyledPreformattedArea-sc-1dtvgs1-28 fxWKEH"
          >
            EXPLAIN MATCH zz3
            <br
              class="styled__StyledBr-sc-1dtvgs1-27 bdFSvo"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
